# quiz3

QUIZ3CirSq/include/: shape.h  shape.h~  shape2.h~
QUIZ3CirSq/src/main/: shape.cpp  shape.cpp~  shape2.cpp~
QUIZ3CirSq/src/test/: lab4tests.cpp  lab4tests.cpp~
QUIZ3TrgSq/: CMakeLists.txt
QUIZ3TrgSq/include/: shape.h
QUIZ3TrgSq/src/main/: shape.cpp  shape.cpp~  shape2.cpp
QUIZ3TrgSq/src/test/: lab4tests.cpp~  lab4tests2.cpp  lab4tests2.cpp~
